--- a/Ui-module/index2.css
+++ b/Ui-module/index2.css
@@ -1,20 +1,33 @@
 #header-div {
-  
-    width:100%;
-    height:30%;
-   position:sticky;
-   background-color: white;
-    padding:10px;
+  position: fixed;
+  top: 0;
+  width:100%;
+  height:auto;
+  background-color: white;
+  padding:10px;
   }
   
  #headerdiv{
     display: grid;
-    grid-template-areas: "img . . . . . . . . hh";
+    grid-template-areas: "img . . . . . .  hh";
     align-items: center;
     font-size:1.25rem;
   }
 h3{
   grid-area: h3;
+  
+}
+
+#maintodiv
+{
+  position: absolute; top: 15%; width: 100%;
+}
+#form-div
+{
+  
+  
+  width: 100%;
+  height: 30%;
   
 }
 
@@ -34,7 +47,7 @@ h3{
   
   header > nav {
     width: 100%;
-    text-align: right;
+    text-align:center;
     grid-area: hh;
     align-items: center;
   
@@ -159,12 +172,23 @@ h3{
   
   @media (max-width:460px)
   {
+    #header-div{
+      width: 100%;
+      height: auto;
+    }
     #headerdiv{
       height:auto;
       display:flex;
       flex-direction: column;
       width:auto;
       
+    }
+
+    #maintodiv
+    {
+      position: absolute;
+      top: 30%;
+      width: 100%;
     }
 
     #header-img{
@@ -227,6 +251,7 @@ h3{
       height: 180px;
       display: flex;
       flex-direction: column;
+      align-self: center;
     }
     footer > ul {
       display: flex;
