--- a/Ui-module/index2.css
+++ b/Ui-module/index2.css
@@ -1,10 +1,12 @@
 #header-div {
   position: fixed;
   top: 0;
+  left:0;
   width:100%;
-  height:auto;
-  background-color: white;
-  padding:10px;
+  height: 70px;
+  border:1px solid black;
+  background-color: blue;
+ 
   }
   
  #headerdiv{
@@ -18,16 +20,24 @@ h3{
   
 }
 
-#maintodiv
+.maintodiv
 {
-  position: absolute; top: 15%; width: 100%;
+ 
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  justify-content: center;
+  align-content: center;
+  
+ 
 }
 #form-div
 {
-  
-  
+ display: flex;
+ flex-direction: column;
   width: 100%;
-  height: 30%;
+  height:auto;
   
 }
 
@@ -96,7 +106,7 @@ h3{
   @media (max-width:1000px)
   {
   #form{
-    width:90%;
+    width:100%;
     margin:auto;
     text-align:center;
     display:flex;
@@ -113,8 +123,8 @@ h3{
     font-size:1.3rem;
   }
   #submit{
-    width:30vw;
-      align-self:center;
+    width:20vw;
+    align-self:center;
     font-size:1.2rem;
     background-color:orange;
     border:0;
@@ -125,9 +135,6 @@ h3{
  
 }
  
-
-
-
 
   footer
   {
@@ -173,22 +180,35 @@ h3{
   @media (max-width:460px)
   {
     #header-div{
+      position:fixed;
+      top: 0;
+     height: auto;
       width: 100%;
-      height: auto;
+   
+     
     }
     #headerdiv{
-      height:auto;
+     
       display:flex;
       flex-direction: column;
-      width:auto;
+     
+      align-items: center;
+      width: 100%;
+      height: auto;
+     
       
     }
 
-    #maintodiv
+    .maintodiv
     {
-      position: absolute;
-      top: 30%;
-      width: 100%;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     margin: 0;
+     padding: 0;
+     width: auto;
+     height:100vh;
     }
 
     #header-img{
@@ -206,7 +226,8 @@ h3{
     #img-div
     {
       display: flex;
-      flex-direction: column;
+      flex-direction:row;
+      align-self: center;
     }
     
     #nav-bar
