--- a/portfoli file/index.css
+++ b/portfoli file/index.css
@@ -57,7 +57,7 @@
 
     .welcome-section{
       
-      top:70px;
+        
         display: flex;
         flex-direction: column;
         background-color: brown;
@@ -67,15 +67,14 @@
         margin: 0;
         padding: 0;
         height: 100vh;
-        
-       
-      
     }
     section > h1 ,p {
       color: white;
         font-size: 2rem;
 
     }
+
+    
 
     .project-section {
       display:flex;
@@ -172,8 +171,9 @@
         flex-direction: column;
        width: 100%;
        height: auto;
-        background-color:white;
-        border: 0;
+       border: 1px solid black;
+        background-color:blue;
+      
 
       }
       #headerdiv
@@ -186,7 +186,8 @@
       header > nav
       {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        margin-bottom: 10px;
       }
       header > nav > a {
         text-align: center;
@@ -194,7 +195,17 @@
         background-color: blue;
         color: black;
   
-      };
+      }
+
+      section > h1  {
+        font-size: 8vw;
+        text-align: center;
+      }
+      section > p {
+        font-size: 8vw;
+        text-align: center;
+      }
+      
     }
 
     @media (max-width:644px)
